--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -10,7 +10,7 @@
     />
   </head>
   <body>
-    <h1>To-Do List: {{ ip_address }}</h1>
+    <h1>To-Do List</h1>
     <form action="{{ url_for('main.add_task') }}" method="post">
       <input type="text" name="title" placeholder="Add a new task" required />
       <button type="submit">Add Task</button>
